Fixed missing color

--- a/css/main.scss
+++ b/css/main.scss
@@ -112,6 +112,10 @@ body {
 	color:#EEE;
 	background-color: #323232;
 }
+.navbar-default .navbar-nav > .active > a, .navbar-default .navbar-nav > .active > a:hover, .navbar-default .navbar-nav > .active > a:focus {
+	color: #EEE;
+	background-color:#323232;
+}
 
 // body
 body {
